Fixed footer alignment

--- a/public/app/themes/jason/src/scss/components/footer.scss
+++ b/public/app/themes/jason/src/scss/components/footer.scss
@@ -23,6 +23,7 @@ footer{
             align-items: center;
             ul {
                 align-items: center;
+                width: 100%;
             }
         }
     }
